--- a/src/pages/tips/tips.html
+++ b/src/pages/tips/tips.html
@@ -1,10 +1,12 @@
+
 <ion-header>
-  <ion-navbar>
-    <ion-title>
-      Know Your Rights
-    </ion-title>
+
+  <ion-navbar hideBackButton="true">
+    <ion-title>tips</ion-title>
   </ion-navbar>
+
 </ion-header>
+
 
 <ion-content padding>
 
