--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -12,7 +12,7 @@
     </div>
   </div>
   <div class="contacts-card" (click)="continueToContacts()">
-    <img src="assets/images/contacts.png" class="home-image"/>
+    <img src="assets/images/phone-receiver.png" class="home-image"/>
     <div class="home-card">
       <h3 class="home-text">Contacts</h3>
     </div>
