--- a/src/pages/slides/slides.html
+++ b/src/pages/slides/slides.html
@@ -1,9 +1,4 @@
-<!--
-  Generated template for the SlidesPage page.
 
-  See http://ionicframework.com/docs/components/#navigation for more info on
-  Ionic pages and navigation.
--->
 <ion-header>
   <ion-navbar>
     <ion-title>Introduction</ion-title>
@@ -11,11 +6,11 @@
 </ion-header>
 <ion-content class="tutorial-page">
   <!-- Tutorial slides -->
-  <ion-slides pager>
+  <ion-slides pager="true">
     <ion-slide *ngFor="let slide of slides">
       <ion-toolbar>
         <ion-buttons end>
-          <button ion-button color="primary" (click)="continueToHome()">Skip</button>
+          <button ion-button color="primary" (click)="goToHome()">Skip</button>
         </ion-buttons>
       </ion-toolbar>
       <img [src]="slide.image" class="slide-image"/>
@@ -28,7 +23,7 @@
       <img src="assets/images/start.png" class="slide-image"/>
       <h2 class="slide-title">Tap to Begin</h2>
       <!-- Adds a click function to continue -->
-      <button ion-button large clear icon-end color="primary" (click)="continueToHome()">
+      <button ion-button large clear icon-end color="primary" (click)="goToHome()">
         Continue
         <ion-icon name="arrow-forward"></ion-icon>
       </button>
