--- a/src/pages/tips/tips.html
+++ b/src/pages/tips/tips.html
@@ -1,13 +1,15 @@
 
 <ion-header>
 
-  <ion-navbar hideBackButton="true">
-    <ion-title>tips</ion-title>
+  <ion-navbar>
+    <ion-title>Tips Presentation</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
+  
+  <iframe src="http://bit.ly/2gPAe4c" class="pres" frameborder="0"></iframe>
 
 </ion-content>
