--- a/src/pages/tips/tips.html
+++ b/src/pages/tips/tips.html
@@ -2,14 +2,14 @@
 <ion-header>
 
   <ion-navbar>
-    <ion-title>Tips Presentation</ion-title>
+    <ion-title>Tips</ion-title>
   </ion-navbar>
 
 </ion-header>
 
 
 <ion-content padding>
-  
+
   <iframe src="http://bit.ly/2gPAe4c" class="pres" frameborder="0"></iframe>
 
 </ion-content>
