--- a/src/pages/rights/rights.html
+++ b/src/pages/rights/rights.html
@@ -15,7 +15,7 @@
 
 <ion-content>
   <h3 class="header-text">All students have the right to:</h3>
-  <ion-list>
+  <ion-list no-lines inset>
     <button ion-item *ngFor="let item of items" (click)="openPage(item)">
       {{ item.title }}
     </button>
