new colors and other stuff

--- a/src/pages/contact/contact.html
+++ b/src/pages/contact/contact.html
@@ -1,7 +1,7 @@
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>
-      Contact
+      Contacts
     </ion-title>
   </ion-navbar>
 </ion-header>
@@ -18,7 +18,7 @@
   <div class="nine-card" (click)="goToNine()">
     <img src="assets/images/hierarchical.png" class="home-image"/>
     <div class="home-card">
-      <h2 class="office-text">Title IX Coordinators</h2>
+      <h2 class="office-text">Title IX Officers</h2>
       <h4 class="contact-text">2 contacts</h4>
     </div>
   </div>
