--- a/src/pages/health/health.html
+++ b/src/pages/health/health.html
@@ -1,7 +1,7 @@
 
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Mental Health</ion-title>
   </ion-navbar>
 
@@ -46,7 +46,7 @@
 
   <ion-icon name="more" (click)="openPopover($event)" class="po-one-popover"></ion-icon>
   <h2 class="po-one-res-text">Confidential Resource</h2>
-  
+
 
   <!-- Contact three -->
   <div class="health-three-cir">
