--- a/src/pages/home/home.html
+++ b/src/pages/home/home.html
@@ -1,6 +1,6 @@
 <ion-header>
   <!-- Hides the back button when continuing to the home page -->
-  <ion-navbar hideBackButton="true">
+  <ion-navbar hideBackButton="true" color="primary">
     <ion-title>Home</ion-title>
   </ion-navbar>
 </ion-header>
