--- a/src/pages/police/police.html
+++ b/src/pages/police/police.html
@@ -1,6 +1,6 @@
 
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Police</ion-title>
   </ion-navbar>
 </ion-header>
@@ -41,7 +41,7 @@
 
   <ion-icon name="more" (click)="openPopover($event)" class="po-one-popover"></ion-icon>
   <h2 class="po-one-res-text">Private Resource</h2>
-  
+
 
   <!-- Contact three -->
   <div class="po-three-cir">
@@ -49,7 +49,7 @@
   </div>
 
   <div>
-    <h2 class="po-one-text">New Hartford Town Police Department</h2>
+    <h2 class="po-one-text">New Hartford Town<br />Police Department</h2>
     <ion-icon name="ios-pin-outline" class="po-one-pin-icon"></ion-icon>
     <h2 class="po-one-loc-text">32 Kellogg Road New Hartford, NY 13413</h2>
     <ion-icon name="ios-call-outline" class="po-one-phone-icon"></ion-icon>
