--- a/src/pages/savr/savr.html
+++ b/src/pages/savr/savr.html
@@ -1,7 +1,7 @@
 
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>SAVR Resources</ion-title>
   </ion-navbar>
 
@@ -25,7 +25,7 @@
 
   <ion-icon name="more" (click)="openPopover($event)" class="po-one-popover"></ion-icon>
   <h2 class="po-one-res-text">Confidential Resource</h2>
-  
+
 
   <!-- Contact two -->
   <div class="savr-two-cir">
