--- a/src/pages/slides/slides.html
+++ b/src/pages/slides/slides.html
@@ -1,6 +1,6 @@
 
 <ion-header>
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Introduction</ion-title>
   </ion-navbar>
 </ion-header>
@@ -21,7 +21,7 @@
       <ion-toolbar>
       </ion-toolbar>
       <img src="assets/images/start.png" class="slide-image"/>
-      <h2 class="slide-title">Tap to Begin</h2>
+      <h2 class="slide-title">Enjoy!</h2>
       <!-- Adds a click function to continue -->
       <button ion-button large clear icon-end color="primary" (click)="goToHome()">
         Continue
