--- a/src/pages/tips/tips.html
+++ b/src/pages/tips/tips.html
@@ -1,7 +1,7 @@
 
 <ion-header>
 
-  <ion-navbar>
+  <ion-navbar color="primary">
     <ion-title>Tips</ion-title>
   </ion-navbar>
 
@@ -9,7 +9,71 @@
 
 
 <ion-content padding>
-
-  <iframe src="http://bit.ly/2gPAe4c" class="pres" frameborder="0"></iframe>
-
+  <div class="dv-card-one">
+    <div class="dv-card-two">
+      <h3 class="dv-title">Dating Violence</h3>
+    </div>
+    <p class="dv-desc">Any act of violence committed by a person who is or has been in a social
+    relationship of a romantic or intimate nature with the victim.</p>
+  </div>
+  <p class="tips">YES YESTERDAY DOESN’T MEAN YES TODAY</p>
+  <div class="dv-card-one">
+    <div class="dv-card-two">
+      <h3 class="dv-title">Domestic Violence</h3>
+    </div>
+    <p class="dv-desc">Any violent felony or misdemeanor crime committed by a
+    current or former spouse or intimate partner of the victim.</p>
+  </div>
+  <p class="tips">YOUR INTOXICATION DOESN’T EXCUSE YOUR ACTIONS</p>
+  <div class="dv-card-one">
+    <div class="dv-card-two">
+      <h3 class="dv-title">Fondling</h3>
+    </div>
+    <p class="dv-desc">The touching of the private body parts of another person
+    for the purpose of sexual gratification, without the consent of the victim.</p>
+  </div>
+  <p class="tips">CONSENT CAN BE WITHDRAWN AT ANY TIME</p>
+  <div class="dv-card-one">
+    <div class="dv-card-two">
+      <h3 class="dv-title">Force</h3>
+    </div>
+    <p class="dv-desc">The use of physical violence and/or imposing on someone
+      physically to gain sexual access. Includes threats, intimidation and
+      coercion that overcome resistance or produce consent.</p>
+  </div>
+  <p class="tips">SNOOZING IS NOT CHOOSING</p>
+  <div class="dv-card-one">
+    <div class="dv-card-two">
+      <h3 class="dv-title">Sexual Discrimination</h3>
+    </div>
+    <p class="dv-desc">Any behavior or action that denies or limits a person’s
+      ability to benefit form, fully participate in the educational programs or
+      activities or the employment opportunities of SUNY Poly based on gender.</p>
+  </div>
+  <p class="tips">COERCION IS NOT CONSENT</p>
+  <div class="dv-card-one">
+    <div class="dv-card-two">
+      <h3 class="dv-title">Sexual Assault</h3>
+    </div>
+    <p class="dv-desc">A physical sexual act or acts committed against another
+      person without consent. Sexual assault is an extreme form of sexual
+      harassment. It includes rape, fondling, incest, etc.</p>
+  </div>
+  <p class="tips">WHEN THEIR CONSENT STOPS SEX STOPS</p>
+  <div class="dv-card-one">
+    <div class="dv-card-two">
+      <h3 class="dv-title">Rape</h3>
+    </div>
+    <p class="dv-desc">The penetration, no matter how slight, of the vagina or
+      anus with any body part or object, or oral penetration by a sex organ of
+      another person, without the consent of the victim.</p>
+  </div>
+  <h2>REMEMBER:</h2>
+  <p>A bystander or reporting individual acting in good faith that discloses
+  any incident of domestic violence, dating violence, stalking, sexual
+  harassment or sexual violence to SUNY Polytechnic Institute officials or law
+  enforcement WILL NOT be subject to the SUNY Polytechnic  Institute’s Student
+  Code of Personal Conduct for violations of alcohol and/or drug use policies
+  occurring at or near the time of the incident.</p>
+  <button ion-button round color="danger" class="tip-button">IF YOU SEE SOMETHING SAY SOMETHING</button>
 </ion-content>
