--- a/src/pages/tnine/tnine.html
+++ b/src/pages/tnine/tnine.html
@@ -6,8 +6,8 @@
 -->
 <ion-header>
 
-  <ion-navbar>
-    <ion-title>Title IX Coordinators</ion-title>
+  <ion-navbar color="primary">
+    <ion-title>Title IX</ion-title>
   </ion-navbar>
 
 </ion-header>
@@ -16,8 +16,9 @@
 <ion-content padding>
 
   <!-- Contact one -->
+
   <div class="title-one-cir">
-    <h2 class="po-one-cir-text">KT</h2>
+    <img src="assets/images/tynank.png">
   </div>
 
   <div>
@@ -36,7 +37,7 @@
 
   <!-- Contact two -->
   <div class="title-two-cir">
-    <h2 class="po-one-cir-text">SG</h2>
+    <img src="assets/images/genthers.png">
   </div>
 
   <div>
@@ -51,6 +52,6 @@
 
   <ion-icon name="more" (click)="openPopover($event)" class="po-one-popover"></ion-icon>
   <h2 class="po-one-res-text">Private Resource</h2>
-  
+
 
 </ion-content>
